FIX: overflow in Languages List (#417)
closes #417

--- a/src/pages/Languages/Languages.less
+++ b/src/pages/Languages/Languages.less
@@ -18,6 +18,9 @@
 
   &__languages-list {
     margin-inline: var(--space);
+    li {
+      hyphens: auto;
+    }
   }
 
   &__nav {
